--- a/app/views/tasks/_new_creative_response.haml
+++ b/app/views/tasks/_new_creative_response.haml
@@ -35,7 +35,7 @@
             You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
     
     %div.step2.hide
-      %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
+      %fieldset{style: "display: inline-block; width:98%;"}
         %legend Create a CR
         %h4 Your question:
         %div{style:"margin-left:12px;"}
@@ -54,10 +54,10 @@
         %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
         = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
     
-    %div.step3.hide
-      %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
-      %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
-      %h4{style:"margin-top:12px; font-size:16px;"} Your CR is now visible to the MetaBright community!
+    %div.step3.hide{ style: "width: 98%; "}
+      %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px; width: 40px;", alt: "Stoney"}
+      %span{style:"position:relative; top:7px; font-size:35px;"} Nice work!
+      %h4{style:"margin-top:12px; font-size:16px;"} Your Creative Response is now visible to the MetaBright community!
       %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a CR!
       %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you'd like, you can <a class="take">post a response</a> to your CR now. 
       %a.restart.button.button-actionable{ style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
