--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -8083,7 +8083,6 @@ code.content {
   width: 100%;
   border-radius: 3px;
   height: 20px;
-  padding-left: 3px;
   background-color: #FFA366;
   color: #404040;
   float: left; }
@@ -8110,7 +8109,7 @@ code.content {
   border: 1px solid rgba(0, 0, 0, 0.1); }
 
 .pointsandstreakspace {
-  margin: 25px 0 0 25px;
+  margin-top: 5px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   vertical-align: top;
   padding: 9px;
