--- a/app/views/tasks/_take_image.html.haml
+++ b/app/views/tasks/_take_image.html.haml
@@ -1,6 +1,6 @@
 %div.CRquestionandresponsespace
   %div.CRquestionspace{ style: "height: 100%;" }
-    %span.cr_question_header Creative response:
+    %span.cr_question_header Creative Response:
     %p
       %pre.CRquestion{ style: "margin-left:25px; "}= @task.question
   %div.CRresponsespace{ style: "min-height: 175px; text-align: center; #{if @task.text? then 'width: 98%; margin-top: 20px;' end}" }
