--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -1,4 +1,4 @@
-%div.quizcontainer{ style: "width: 926px;" }
+%div.quizcontainer{ style: "margin-top: 90px;"}
   = render "modals/report_issue"
   
   = form_for(@task, url: took_section_path(@section, task_id: @task.id), html: { id: "challenge_form", style: "margin: 0;" }) do |f|
