--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -11,8 +11,8 @@
     
     %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus", style: "height: 250px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; margin: 6px 12px 12px 12px;font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;" }= @submitted_answer.content
 
-    - if params[:preview] == "true"
-      %iframe{ src: raw_path(@submitted_answer.id), style: "height: 300px; width: 95%; overflow: auto; border: 1px solid #CCC; background-color: white; border-radius: 4px; padding: 4px 6px;" }
+    - if params[:m] == "preview"
+      %iframe{ src: raw_path(@submitted_answer.id), style: "height: 300px; width: 544px; margin: 10px auto; overflow: auto; border: 1px solid #CCC; background-color: white; border-radius: 4px; padding: 4px 6px;" }
       
     %div{ style: "margin: 10px 0 5px 0; text-align: center;" }
       %a.add_caption{ onclick: "$('#caption').toggle(); $('.add_caption span.caret').toggle();"} 
