--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -181,7 +181,8 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .profilepersonaicons img{ margin-right:8px; height:30px; width:30px; }
 .leftrailcontent{ list-style-type: none; display:list-item; margin-top:3px; }
 .leftrailcontent a:hover{text-decoration:none;}
-.leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; margin-top:5px; vertical-align:baseline;}
+.leftrailicon{ height:57px; width:57px; border-radius:3px; margin-right:8px; margin-top:5px; vertical-align:baseline;}
+.leftrailcontent a:nth-child(4n) img{ margin-right: 0;}
 .leftbox{text-shadow: 0 1px 0 white; border: 1px solid rgba(0, 0, 0, .1);font-size:12px; position: relative; margin-bottom: 12px;line-height: 16px;border-radius: 6px; display:block;}
 .leftboxfooter ul{ list-style-type:none; margin:0; }
 .leftboxfooter span{ font-size:11px; color:gray; }
