--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -44,6 +44,14 @@
   
   %div.row
     %div.span5
+      - if @similar_paths
+        %div.leftbox
+          %div.box_header Similar Challenges
+          %div.leftboxfooter{style:"background-color:white;"}
+            %li.leftrailcontent
+              - @similar_paths.limit(8).each do |p|
+                = link_to challenge_path(p.permalink) do
+                  = image_tag p.picture, class: "leftrailicon", title: "#{p.name}", alt: "#{p.name}"
       %div.leftbox.newsfeed{ style: "min-height: 361px;" }
         %div#leaderboard_pop.box_header{style: "padding: 10px 12px; "} Leaderboard
         %ul#ranks{ style: "padding: 0px;"}
@@ -91,16 +99,6 @@
                   = link_to truncate(next_user.name, length: 22), profile_path(next_user.username), class: "name"
                   %span.level lvl. #{Enrollment.points_to_level(next_user.total_points.to_i)}
                   %span.points= next_user.total_points
-                
-      
-      - if @similar_paths
-        %div.leftbox
-          %div.box_header Similar Challenges
-          %div.leftboxfooter{style:"background-color:white;"}
-            %li.leftrailcontent
-              - @similar_paths.each do |p|
-                = link_to challenge_path(p.permalink) do
-                  = image_tag p.picture, class: "leftrailicon", title: "#{p.name}", alt: "#{p.name}"
     %div.span11
       %div.newsfeed
         %div.box_header
