--- a/app/views/tasks/_take_task.html.haml
+++ b/app/views/tasks/_take_task.html.haml
@@ -1,11 +1,11 @@
 %div.CRquestionandresponsespace
-  %div.CRquestionspace{ style: "height: 100%;" }
-    %span.cr_question_header{ style: "margin-left:10px;"} Your Task, should you choose to accept it:
+  %div.CRquestionspace{ style: "width: 98%;" }
+    %span.cr_question_header Your Task, should you choose to accept it:
     %p
       %pre.CRquestion{ style: "margin-left:25px; "}= @task.question
       %hr{ style: "margin: 15px 10px;" }        
-  %div.CRresponsespace{ style: "min-height: 175px; text-align: center; #{if @task.text? then 'width: 98%; margin-top: 20px;' end}" }
-    %h4{ style: "margin-bottom: 0px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 310px; margin-right: auto; margin-left: auto;" } Provide proof of completion:
+  %div.CRresponsespace{ style: "min-height: 175px; width: 97.4%; #{if @task.text? then 'margin-top: 20px;' end}" }
+    %h4{ style: "text-align: center; margin-bottom: 12px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 250px; margin-right: auto; margin-left: auto;" } Provide proof of completion:
     
     %input{ type: "hidden", name: "url", value: @submitted_answer.url }
     %input{ type: "hidden", name: "content", value: @submitted_answer.content }
@@ -26,7 +26,7 @@
       %div.error.hide{ style: "font-size: 13px; color: #971D1C;" }
       %div{ style: "text-align:center; "}
         %img{ alt: "Lightbulb", src: LIGHT_BULB_URL, style: "height:15px; display:inline;" }
-        %p{ style: "display:inline; font-size:12px; " } Example: code on Github, pictures on Flickr, blog post or Youtube video 
+        %p{ style: "display:inline; font-size:12px; margin-top: -5px;" } Example: code on Github, pictures on Flickr, blog post or Youtube video 
 
     %div#image_input{ style: "text-align:center; display: none; height: 35px; margin-top: 15px;" }
       %div{ style: "margin:15px 0 5px 27px;" }
