--- a/app/views/tasks/_edit_task_form.html.haml
+++ b/app/views/tasks/_edit_task_form.html.haml
@@ -9,7 +9,7 @@
     %div.control-group
       %label.control-label Question
       %div.controls
-        = f.text_area :question, class: "xxlarge", rows: "3"
+        = f.text_area :question, class: "xxlarge", rows: "6", style: "width: 95%;"
     %div.answers
       - @answers.each do |a|
         %div.control-group
@@ -26,4 +26,4 @@
     %div.control-group
       %label.control-label Template
       %div.controls
-        = f.text_area :template, style: "height: 150px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;"
+        = f.text_area :template, style: "height: 250px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;"
