--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -9,7 +9,11 @@
     %input{ type: "hidden", name: "content", value: @submitted_answer.content }
     %input{ type: "hidden", name: "mode", value: "submit" }
     
-    %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus", style: "height: 250px; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; margin: 6px 12px 12px 14px;font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;" }= @submitted_answer.content
+    %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus", style: "height: 250px; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; margin: 6px 12px 12px 14px;font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;" }
+      - if not @submitted_answer.content.blank?
+        = @submitted_answer.content
+      - elsif not @task.template.blank?
+        = @task.template
 
     - if params[:m] == "preview"
       %div{ style: "text-align:center; "}
