Adding switch mode to see code/preview in newsfeed.

--- a/app/views/newsfeed/_feed.html.haml
+++ b/app/views/newsfeed/_feed.html.haml
@@ -14,7 +14,7 @@
       $(this).parents(".post").hide("slow");
     });
     
-    $(".CRarea iframe").parent().hover(
+    $(".preview, .raw").parent().hover(
       function(){ $(this).find(".onhover").show(); },
       function(){ $(this).find(".onhover").hide(); }
     );
