--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -49,11 +49,16 @@
     %div#cr_pop.CRarea
       - if post.task.text?
         - if post.content && post.content.downcase.include?("<html>")
-          %div.onhover{ style: "width: 100%; text-align: right; opacity: 0.7; padding: 3px; background-color: white; display: none; position: absolute; float: right; z-index: 2; font-size: 15px; margin-top: 5px;" }
-            %span.reload{ style: "color: black; cursor: pointer; text-decoration: underline;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
-            |
-            %span= link_to "View raw", raw_path(post.submitted_answer.id), target: "_blank", style: "text-decoration: underline; color: black; padding-right: 5px;"
-          %iframe{ src: raw_path(post.submitted_answer.id), style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
+          .preview
+            %div.onhover{ style: "width: 100%; text-align: right; opacity: 0.7; padding: 3px; background-color: white; display: none; position: absolute; float: right; z-index: 2; font-size: 15px; margin-top: 5px;" }
+              %span.reload{ style: "color: black; cursor: pointer; text-decoration: underline; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
+              |
+              %span.view_raw{ style: "text-decoration: underline; color: black; padding-right: 5px;cursor: pointer;", onclick: "$('.preview').hide(); $('.raw').show();" } View Raw
+            %iframe{ src: raw_path(post.submitted_answer.id), style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
+          .raw.hide
+            %div.onhover{ style: "width: 100%; text-align: right; opacity: 0.7; padding: 3px; background-color: white; display: none; position: absolute; float: right; z-index: 2; font-size: 15px; margin-top: 5px;" }
+              %span.view_preview{ style: "text-decoration: underline; color: black; padding-right: 5px; cursor: pointer;", onclick: "$('.raw').hide(); $('.preview').show();"} View Preview
+            %code.content{ style: "word-break:normal;" }= post.content
         - else
           %code.content{ style: "word-break:normal;" }= post.content
       
