--- a/app/views/tasks/_take_task.html.haml
+++ b/app/views/tasks/_take_task.html.haml
@@ -86,12 +86,12 @@
         success: function(results){
           result = $.parseJSON(results.data);
         
-          if(result.warnings){
-            $.log(result.warnings);
-          }
+          // if(result.warnings){
+          //             $.log(result.warnings);
+          //           }
         
           if(result.error){
-            $.log(result.error);
+            //$.log(result.error);
             $("div.error").text(result.error).show();
             $('#image_input').show();
           } else {
