--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -46,7 +46,7 @@
 
     $(".launchpad_link").on("ajax:success", function(xhr, data, etc){
       if(data.status){
-        $.log("Cannot access this content.");
+        //Should be a log here. Fuck IE
       } else {
         $("span.pointer_caret").remove();
         $(".sectioninfocontainer").replaceWith(data);
