--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -1,3 +1,8 @@
+:css
+  .ace_gutter { border-left: 1px solid #CCC; border-top: 1px solid #CCC; border-bottom: 1px solid #CCC; height: 248px; }
+  .ace_scroller { border: 1px solid #CCC; height: 248px !important; }
+  .ace_sb { border-right: 1px solid #CCC; border-top: 1px solid #CCC; border-bottom: 1px solid #CCC; height: 248px; width: 16px !important; }
+
 %div.CRquestionandresponsespace
   %div.CRquestionspace{ style: "width: 98%;" }
     %span.cr_question_header Creative Response:
@@ -9,13 +14,16 @@
     %input{ type: "hidden", name: "content", value: @submitted_answer.content }
     %input{ type: "hidden", name: "mode", value: "submit" }
     
-    %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus", style: "height: 250px; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; margin: 6px 12px 12px 14px;font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;" }= @submitted_answer.content
-
+    %textarea{ name: "content", id: "answer_input"}= @submitted_answer.content
+    %div{ id: "content", style:"width: 98%; margin: 0 auto 15px auto; min-height:250px; position: relative; padding-top:0;"}
+        
     - if params[:m] == "preview"
       %div{ style: "text-align:center; "}
         %h4{ style: "text-align: center; margin-bottom: 12px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 120px; margin-right: auto; margin-left: auto;" } Preview:
         %iframe{ src: raw_path(@submitted_answer.id), style: "margin:0 auto; width: 544px; overflow: auto; border: 1px solid #CCC; background-color: white; border-radius: 4px; padding: 4px 6px;" }
-      
+          
+
+            
     %div{ style: "margin: 10px 0 5px 0; text-align: center;" }
       %a.add_caption{ onclick: "$('#caption').toggle(); $('.add_caption span.caret').toggle();"} 
         %span.text Add caption
@@ -31,6 +39,18 @@
     = f.submit "Save as Draft", class: "button button-standard", id: "draft_button", style: "float:right; margin-right: 10px;"
   = f.submit "View Preview", class: "button button-standard", id: "preview_button", style: "float:right; margin-right: 10px;"
   = image_tag ICON_LOADING_URL, size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
+
+%script{:charset => "utf-8", :src => "http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js", :type => "text/javascript"}
+:javascript
+  var editor = ace.edit("content");
+  editor.setTheme("ace/theme/clouds");
+  editor.getSession().setMode("ace/mode/javascript");
+  document.getElementById('content').style.fontSize='13px';
+  var textarea = $('textarea[name="content"]').hide();
+  editor.getSession().setValue(textarea.val());
+  editor.getSession().on('change', function(){
+    textarea.val(editor.getSession().getValue());
+  });
       
 :javascript
   $("#preview_button").click(function(){
