--- a/app/views/tasks/_edit_task_form.html.haml
+++ b/app/views/tasks/_edit_task_form.html.haml
@@ -23,7 +23,12 @@
             = link_to "Remove", delete_stored_resource_path(@stored_resource.id), method: :delete, confirm: "Are you sure you want to remove this attachment?"
           - else
             = link_to "Add Image", add_stored_resource_task_path(@task)
+    - if @task.creative_response?
+      %div.control-group
+        %label.control-label Template
+        %div.controls
+          = f.text_area :template, style: "height: 250px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;"
     %div.control-group
-      %label.control-label Template
+      %label.control-label Priority
       %div.controls
-        = f.text_area :template, style: "height: 250px; width: 95%; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 14px;"
+        = f.text_field :position
