welcome headline changes

--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -43,9 +43,9 @@
   %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/GiantStoney.png", style: "display: inline-block; height: 250px; vertical-align:top; position: relative; top:32px; "}
   %div{ style: "display: inline-block; width: 65%; margin-top:10px"}
     .header     
-      %h1{ style: "font-size: 32px;" } New High Score!              
+      %h1{ style: "font-size: 32px;" } New high score!              
       %h2{ style: "font-size: 18px;" }
-        Save your high score, reserve your username and keep racking up points!
+        Save your high score, reserve your username, and keep racking up points!
     .body.centered{ style: "margin-top: 17px; margin-bottom: 0; " }
       .signup
         = link_to "/auth/google_oauth2", class: "btn danger" do
