--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -15,8 +15,8 @@
     %h4{ style: "text-align: center; margin-bottom: 12px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 150px; margin-right: auto; margin-left: auto;" } Your answer:
     %input{ type: "hidden", name: "mode", value: "submit" }
     
-    %textarea{ name: "content", id: "answer_input"}= @submitted_answer.content || @task.template
-    %div{ id: "content", style:"width: 98%; margin: 0 auto 15px auto; min-height:250px; position: relative; padding-top:0;"}
+    %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus", style: "height: 250px; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; margin: 6px 12px 12px 14px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 13px;"}= @submitted_answer.content || @task.template
+    /%div{ id: "content", style:"width: 98%; margin: 0 auto 15px auto; min-height:250px; position: relative; padding-top:0;"}
         
     - if params[:m] == "preview" and (@task.template or @submitted_answer.preview or @submitted_answer.preview_errors)
       %div{ style: "text-align:center; "}
@@ -51,16 +51,16 @@
 
 %script{:charset => "utf-8", :src => "http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js", :type => "text/javascript"}
 :javascript
-  var editor = ace.edit("content");
-  editor.setTheme("ace/theme/cloud");
-  editor.getSession().setMode("ace/mode/#{@path.name.downcase.include?('ruby') ? 'ruby' : 'html'}");
-  editor.getSession().setUseSoftTabs(true);
-  editor.getSession().setTabSize(2);
-  var textarea = $('textarea[name="content"]').hide();
-  editor.getSession().setValue(textarea.val());
-  editor.getSession().on('change', function(){
-    textarea.val(editor.getSession().getValue());
-  });
+  // var editor = ace.edit("content");
+  // editor.setTheme("ace/theme/cloud");
+  // editor.getSession().setMode("ace/mode/#{@path.name.downcase.include?('ruby') ? 'ruby' : 'html'}");
+  // editor.getSession().setUseSoftTabs(true);
+  // editor.getSession().setTabSize(2);
+  // var textarea = $('textarea[name="content"]').hide();
+  // editor.getSession().setValue(textarea.val());
+  // editor.getSession().on('change', function(){
+  //   textarea.val(editor.getSession().getValue());
+  // });
       
 :javascript
   $("#preview_button").click(function(){
