--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -1,5 +1,5 @@
 :css
-  .ace_content { font-size: 13px; font-family: 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace; }
+  #editor div, #editor span { font-size: 13px; font-family: 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace !important; }
   .ace_gutter { border-left: 1px solid #CCC; border-top: 1px solid #CCC; border-bottom: 1px solid #CCC; height: 248px; }
   .ace_scroller { border: 1px solid #CCC; height: 248px !important; }
   .ace_sb { border-right: 1px solid #CCC; border-top: 1px solid #CCC; border-bottom: 1px solid #CCC; height: 248px; width: 16px !important; }
@@ -16,7 +16,7 @@
     %input{ type: "hidden", name: "mode", value: "submit" }
     
     %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus", style: "height: 250px; overflow: auto; border: 1px solid #cccccc; background-color: #ffffff; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 4px; margin: 6px 12px 12px 14px; font-family: 'Menlo', 'Courier New', 'Terminal', monospace; font-size: 13px;"}= @submitted_answer.content || @task.template
-    %div{ id: "content", style:"width: 98%; margin: 0 auto 15px auto; min-height:250px; position: relative; padding-top:0;"}
+    %div{ id: "editor", style:"width: 98%; margin: 0 auto 15px auto; min-height:250px; position: relative; padding-top:0;"}
         
     - if params[:m] == "preview" and (@task.template or @submitted_answer.preview or @submitted_answer.preview_errors)
       %div{ style: "text-align:center; "}
@@ -51,7 +51,7 @@
 
 %script{:charset => "utf-8", :src => "http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js", :type => "text/javascript"}
 :javascript
-  var editor = ace.edit("content");
+  var editor = ace.edit("editor");
   editor.setTheme("ace/theme/cloud");
   editor.getSession().setMode("ace/mode/#{@path.name.downcase.include?('ruby') ? 'ruby' : 'html'}");
   editor.getSession().setUseSoftTabs(true);
