--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -18,6 +18,8 @@
     %p
       %pre.CRquestion{ style: "margin-left:25px; "}= @task.question
   %div.CRresponsespace{ style: "min-height: 175px; width: 97.4%; margin-top: 20px;" }
+    - if @task.template
+      = f.submit "View Preview", class: "button button-small button-info", id: "preview_button", style: "float:right; margin-right: 6px; padding: 3px 10px;"
     %p{ style:"display: none; float: right; font-size: 12px; margin-right: 15px; top: 15px; position: relative;"} (Save: Ctrl-S, Preview: Ctrl-R)
     %h4{ style: "text-align: center; margin-bottom: 12px; font-size: 17px; border-bottom: 1px solid rgba(0, 0, 0, .1); width: 150px; margin-right: auto; margin-left: auto;" } Your answer:
     %input{ type: "hidden", name: "mode", value: "submit" }
@@ -37,7 +39,7 @@
             = @submitted_answer.preview_errors
           
         - else
-          %iframe{ src: raw_path(@submitted_answer.id), style: "margin:0 auto; width: 544px; overflow: auto; border: 1px solid #CCC; background-color: white; border-radius: 4px; padding: 4px 6px;" }
+          %iframe{ src: raw_path(@submitted_answer.id), style: "margin:0 auto; min-height: 275px; width: 544px; overflow: auto; border: 1px solid #CCC; background-color: white; border-radius: 4px; padding: 4px 6px;" }
 
     %div{ style: "margin: 10px 0 5px 0; text-align: center;" }
       %a.add_caption{ onclick: "$('#caption').toggle(); $('.add_caption span.caret').toggle();"} 
@@ -52,15 +54,13 @@
     = f.submit "Update", class: "button button-actionable", id: "submit_button", style: "float:right;"
   - else
     = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
-    = f.submit "Save as Draft", class: "button button-standard", id: "draft_button", style: "float:right; margin-right: 10px;"
-  - if @task.template
-    = f.submit "View Preview", class: "button button-standard", id: "preview_button", style: "float:right; margin-right: 10px;"
+    = f.submit "Save as Draft", class: "button button-standard", id: "draft_button", style: "float:right; margin-right: 10px;"  
   = image_tag ICON_LOADING_URL, size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
 
 %script{:charset => "utf-8", :src => "http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js", :type => "text/javascript"}
 :javascript
   var editor = ace.edit("editor");
-  editor.setTheme("ace/theme/cloud");
+  editor.setTheme("ace/theme/github");
   editor.getSession().setMode("ace/mode/#{@path.name.downcase.include?('ruby') ? 'ruby' : 'html'}");
   editor.getSession().setUseSoftTabs(true);
   editor.getSession().setTabSize(2);
